--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3DWAX - Custom Jewelry Printing</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
@@ -41,13 +41,13 @@
         <form action="/send-message" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
-            <br>
+
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
-            <br>
+
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
-            <br>
+
             <button type="submit">Send</button>
         </form>
     </section>
