--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p class="subtitle">35 years jewelry experience!</p>
             <div class="uploader">
                 <h2>3D Wax File Uploader</h2>
-                <!-- JotForm Embed Code with Adjusted Height -->
+                <!-- JotForm Embed Code for Form 4 -->
                 <iframe src="https://form.jotform.com/243076285020147" width="100%" height="600" frameborder="0" style="border: 1px solid #ccc; border-radius: 8px; max-width: 400px; overflow: hidden;"></iframe>
             </div>
         </div>
