--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
             <h1>3D WAX</h1>
             <p class="subtitle">35 years jewelry experience!</p>
             <div class="uploader">
-                <h2>3D Wax File Uploader</h2>
-                <!-- JotForm Embed Code with Increased Height -->
+                <!-- 3D Wax File Uploader başlığı kaldırıldı -->
                 <iframe src="https://form.jotform.com/243076621632049" width="100%" height="750" frameborder="0" style="border: 1px solid #ccc; border-radius: 8px; max-width: 400px; overflow: hidden;"></iframe>
             </div>
         </div>
