--- a/index.html
+++ b/index.html
@@ -8,29 +8,31 @@
 </head>
 <body>
     <div class="container">
-        <div class="left">
+        <!-- Sol Bölüm -->
+        <div class="left-section">
             <h2>Specialized in <br> 3D jewelry models</h2>
-            <img src="your-image.jpg" alt="3D Jewelry Models">
+            <img src="your-image.jpg" alt="3D Jewelry Models" class="main-image">
             <div class="contact-info">
                 <h3>3D Wax</h3>
-                <p><i class="location-icon"></i> 608 S Hill St suite 507, Los Angeles, CA 90014</p>
-                <p><i class="clock-icon"></i> Today <span class="closed">Closed today</span></p>
-                <p><i class="link-icon"></i> <a href="http://www.3dwax.com">www.3dwax.com</a></p>
-                <p><i class="email-icon"></i> <a href="mailto:3dwaxdtla@gmail.com">3dwaxdtla@gmail.com</a></p>
+                <p>📍 608 S Hill St suite 507, Los Angeles, CA 90014</p>
+                <p>⏰ Today <span class="closed">Closed today</span></p>
+                <p>🔗 <a href="http://www.3dwax.com">www.3dwax.com</a></p>
+                <p>✉️ <a href="mailto:3dwaxdtla@gmail.com">3dwaxdtla@gmail.com</a></p>
             </div>
         </div>
         
-        <div class="center">
+        <!-- Merkez Bölüm -->
+        <div class="center-section">
             <h1>3D WAX</h1>
             <p class="subtitle">35 years jewelry experience!</p>
             <div class="uploader">
-                <!-- 3D Wax File Uploader başlığı kaldırıldı -->
-                <iframe src="https://form.jotform.com/243076621632049" width="100%" height="750" frameborder="0" style="border: 1px solid #ccc; border-radius: 8px; max-width: 400px; overflow: hidden;"></iframe>
+                <iframe src="https://form.jotform.com/243076621632049" width="100%" height="500" frameborder="0" style="border: none; border-radius: 8px;"></iframe>
             </div>
         </div>
 
-        <div class="right">
-            <img src="qr-code-venmo.png" alt="Venmo QR Code">
+        <!-- Sağ Bölüm -->
+        <div class="right-section">
+            <img src="qr-code-venmo.png" alt="Venmo QR Code" class="qr-code">
             <h2>Same day printing available!</h2>
             <p>Most files received by 11:30 am will be ready same day by 3:30 pm</p>
             <p>Files received after 3:30 pm will be ready next day by 11:30 am</p>
