--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
             </div>
         </div>
         
+        <!-- Ayırıcı Çizgi -->
+        <div class="divider"></div>
+
         <!-- Merkez Bölüm -->
         <div class="center-section">
             <h1>3D WAX</h1>
             <p class="subtitle">35 years jewelry experience!</p>
             <div class="uploader">
-                <iframe src="https://form.jotform.com/243076621632049" width="100%" height="700" frameborder="0" style="border: none; border-radius: 8px;"></iframe>
+                <iframe src="https://form.jotform.com/243076621632049" width="100%" height="700" frameborder="0" style="border: none;"></iframe>
             </div>
         </div>
+
+        <!-- Ayırıcı Çizgi -->
+        <div class="divider"></div>
 
         <!-- Sağ Bölüm -->
         <div class="right-section">
