--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <!-- Sol Bölüm -->
+        <!-- Left Section -->
         <div class="left-section">
             <h2>Specialized in <br> 3D jewelry models</h2>
             <img src="your-image.jpg" alt="3D Jewelry Models" class="main-image">
@@ -20,23 +20,8 @@
                 <p>✉️ <a href="mailto:3dwaxdtla@gmail.com">3dwaxdtla@gmail.com</a></p>
             </div>
         </div>
-        
-        <!-- Ayırıcı Çizgi -->
-        <div class="divider"></div>
 
-        <!-- Merkez Bölüm -->
-        <div class="center-section">
-            <h1>3D WAX</h1>
-            <p class="subtitle">35 years jewelry experience!</p>
-            <div class="uploader">
-                <iframe src="https://form.jotform.com/243076621632049" width="100%" height="700" frameborder="0" style="border: none;"></iframe>
-            </div>
-        </div>
-
-        <!-- Ayırıcı Çizgi -->
-        <div class="divider"></div>
-
-        <!-- Sağ Bölüm -->
+        <!-- Right Section -->
         <div class="right-section">
             <img src="qr-code-venmo.png" alt="Venmo QR Code" class="qr-code">
             <h2>Same day printing available!</h2>
@@ -44,6 +29,15 @@
             <p>Files received after 3:30 pm will be ready next day by 11:30 am</p>
             <p>Reliable on time service! "purple wax"</p>
             <p><strong>All files are confidential!</strong></p>
+        </div>
+
+        <!-- Uploader Section -->
+        <div class="uploader-section">
+            <h1>3D WAX</h1>
+            <p class="subtitle">35 years jewelry experience!</p>
+            <div class="uploader">
+                <iframe src="https://form.jotform.com/243076621632049" width="100%" height="700" frameborder="0" style="border: none;"></iframe>
+            </div>
         </div>
     </div>
 </body>
