--- a/index.html
+++ b/index.html
@@ -7,22 +7,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <h1>3D WAX</h1>
-        <p class="subtitle">35 years jewelry experience!</p>
-    </div>
-
-    <div class="uploader-container">
-        <div class="image-left">
-            <img src="your-image.jpg" alt="3D Jewelry Models">
+    <div class="container">
+        <!-- Sol Bölüm: Görsel ve İşletme Bilgileri -->
+        <div class="left-section">
+            <h2>Specialized in <br> 3D jewelry models</h2>
+            <img src="your-image.jpg" alt="3D Jewelry Models" class="main-image">
+            <div class="contact-info">
+                <h3>3D Wax</h3>
+                <p>📍 608 S Hill St suite 507, Los Angeles, CA 90014</p>
+                <p>⏰ Today <span class="closed">10:00 am - 5:00 pm Closed now</span></p>
+                <p>🔗 <a href="http://www.3dwax.com">www.3dwax.com</a></p>
+                <p>✉️ <a href="mailto:3dwaxdtla@gmail.com">3dwaxdtla@gmail.com</a></p>
+            </div>
         </div>
 
-        <div class="uploader">
-            <iframe src="https://form.jotform.com/243076621632049" width="100%" height="600" frameborder="0" style="border: none;"></iframe>
+        <!-- Merkez Bölüm: Başlık ve Uploader -->
+        <div class="center-section">
+            <h1>3D WAX</h1>
+            <p class="subtitle">35 years jewelry experience!</p>
+            <div class="uploader">
+                <iframe src="https://form.jotform.com/243076621632049" width="100%" height="400" frameborder="0" style="border: none;"></iframe>
+            </div>
         </div>
 
-        <div class="image-right">
-            <img src="qr-code-venmo.png" alt="Venmo QR Code">
+        <!-- Sağ Bölüm: QR Kod ve Bilgilendirme -->
+        <div class="right-section">
+            <img src="qr-code-venmo.png" alt="Venmo QR Code" class="qr-code">
+            <h2>Same day printing available!</h2>
+            <p>Most files received by 11:30 am will be ready same day by 3:30 pm</p>
+            <p>Files received after 3:30 pm will be ready next day by 11:30 am</p>
+            <p>Reliable on time service! "purple wax"</p>
+            <p><strong>All files are confidential!</strong></p>
         </div>
     </div>
 </body>
