--- a/index.html
+++ b/index.html
@@ -3,41 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Wax - Custom Jewelry Printing</title>
-    <link rel="stylesheet" href="style.css">
+    <title>3D Waxing</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <!-- Sol Bölüm: Görsel ve İşletme Bilgileri -->
         <div class="left-section">
-            <h2>Specialized in <br> 3D jewelry models</h2>
-            <img src="your-image.jpg" alt="3D Jewelry Models" class="main-image">
-            <div class="contact-info">
-                <h3>3D Wax</h3>
-                <p>📍 608 S Hill St suite 507, Los Angeles, CA 90014</p>
-                <p>⏰ Today <span class="closed">10:00 am - 5:00 pm Closed now</span></p>
-                <p>🔗 <a href="http://www.3dwax.com">www.3dwax.com</a></p>
-                <p>✉️ <a href="mailto:3dwaxdtla@gmail.com">3dwaxdtla@gmail.com</a></p>
-            </div>
+            <h2>About Us</h2>
+            <p>We provide the best 3D wax printing services for your jewelry needs.</p>
         </div>
-
-        <!-- Merkez Bölüm: Başlık ve Uploader -->
         <div class="center-section">
-            <h1>3D WAX</h1>
-            <p class="subtitle">35 years jewelry experience!</p>
+            <h1>3D Waxing Services</h1>
+            <p class="subtitle">Upload your designs and bring them to life!</p>
             <div class="uploader">
-                <iframe src="https://form.jotform.com/243076621632049" width="100%" height="400" frameborder="0" style="border: none;"></iframe>
+                <h3>Upload Your File</h3>
+                <form action="/upload" method="POST" enctype="multipart/form-data">
+                    <input type="file" name="file" id="file" accept=".stl, .3dm">
+                    <button type="submit">Upload</button>
+                </form>
             </div>
         </div>
-
-        <!-- Sağ Bölüm: QR Kod ve Bilgilendirme -->
         <div class="right-section">
-            <img src="qr-code-venmo.png" alt="Venmo QR Code" class="qr-code">
-            <h2>Same day printing available!</h2>
-            <p>Most files received by 11:30 am will be ready same day by 3:30 pm</p>
-            <p>Files received after 3:30 pm will be ready next day by 11:30 am</p>
-            <p>Reliable on time service! "purple wax"</p>
-            <p><strong>All files are confidential!</strong></p>
+            <h2>Contact Info</h2>
+            <p><strong>Email:</strong> support@3dwax.com</p>
+            <p><strong>Phone:</strong> +1 (123) 456-7890</p>
         </div>
     </div>
 </body>
